fix(app-mobile-menu): z-index

--- a/src/client/components/app-core/variables.css
+++ b/src/client/components/app-core/variables.css
@@ -33,8 +33,9 @@
   --app-header-height-large: 4.0625rem; /* 65px */
 
   /* Z-INDEXES */
-  --z-index-high: 2;
   --z-index-low: 1;
+  --z-index-high: 2;
+  --z-index-overlay: 3;
 
   /* GRID */
   --grid-column-small: 25px;
